<resources>
    <string name="app_name">Casa Limpa</string>
    <string name="contrate_um_profissional">Contrate um profissional</string>
    <string name="casa_limpa">Casa Limpa</string>
    <string name="entrar">Entrar</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="cadastro">Cadastro</string>
    <string name="CadastrarPerfilButton">Cadastrar meu Perfil</string>
    <string name="title_home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="meu_perfil">Meu perfil</string>
    <string name="avaliacoes">Avaliações</string>
    <string name="servicos">Serviços</string>
    <string name="title_activity_servicos_prestados">ServicosPrestadosActivity</string>
    <string name="title_activity_meus_servicos">MeusServicosActivity</string>
    <string name="login">Login</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="bem_vindo">Bem Vindo(a)</string>
    <string name="meus_servicos">Meus Serviços</string>
    <string name="adicionar_novo_servico">Adicionar um novo serviço</string>
    <string name="desabilitar_servico">Desabilitar Serviço</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="contratar_servico">Contratar Serviço</string>
    <string name="servicos_prestados">Serviços Prestados</string>
    <string name="editar_perfil_principal">Editar Perfil Principal</string>
    <string name="editar_perfil_prestador_servico">Editar Perfil Prestador de Serviço</string>
    <string name="editar_perfil_empregador">Editar Perfil Empregador</string>
    <string name="sair">Sair</string>

    <string-array name="categoria_servico">
        <item>Selecione um item</item>
        <item>Alimentação</item>
        <item>Instalação e manuntenção de equipamentos</item>
        <item>Limpeza</item>
        <item>Manuntenção Preventiva</item>
        <item>Organização do lar</item>
        <item>Pequenos Reparos</item>
        <item>Reformas</item>
    </string-array>

    <string-array name="cidades">
        <item>Selecione um item</item>
        <item>Brasília</item>
        <item>São Paulo</item>
    </string-array>

    <string-array name="bairros">
        <item>Selecione um item</item>
        <item>Qd 100</item>
        <item>Qd 200</item>
        <item>Limpeza</item>
    </string-array>
</resources>
